@@ -164,16 +164,15 @@ yyerror(const char *);
 %token TOK_EXPLAIN "EXPLAIN"
 %token TOK_INVALID "invalid"
 
-%left ':'
 %left TOK_FROM TOK_ELSE ','
 %left TOK_UNION TOK_MINUS TOK_INTERSECT TOK_SEMIMINUS TOK_JOIN TOK_SEMIJOIN
-        TOK_MATCHING TOK_RENAME TOK_WRAP TOK_UNWRAP TOK_GROUP TOK_UNGROUP
-        TOK_DIVIDEBY TOK_PER
-%left TOK_WHERE '{'
+        TOK_MATCHING TOK_DIVIDEBY TOK_PER
+%left TOK_SUBSET_OF TOK_IN
+%left TOK_WHERE '{' TOK_RENAME TOK_WRAP TOK_UNWRAP TOK_GROUP TOK_UNGROUP ':'
 %left TOK_OR TOK_XOR
 %left TOK_AND
 %left TOK_NOT
-%left '=' '<' '>' TOK_NE TOK_LE TOK_GE TOK_IN TOK_SUBSET_OF TOK_LIKE TOK_REGEX_LIKE
+%left '=' '<' '>' TOK_NE TOK_LE TOK_GE TOK_LIKE TOK_REGEX_LIKE
 %left '+' '-' TOK_CONCAT
 %left '*' '/'
 %left '.' UPLUS UMINUS '['
